# jua-training-poc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  ddp_config.yaml  docker_runner.py  launch_sbatch.py  pyproject.toml  ruff.toml  test.ipynb
.github/workflows/: test_and_deploy.yaml
configs/: medium_model.yaml  small_model.yaml  tiny_model.yaml  tiny_model_local.yaml
scripts/: prepare-venv.sh
source/: config.py  data.py  model.py  trainer.py  utils.py
source/modules/metrics/: mse.py  weighting.py
source/modules/optimizers/: adam.py
source/modules/positional_embedding/: sincos.py
source/modules/schedulers/: cosine_annealing.py
stack/: template_stack.py
template/: template.py
tests/: test_lambda.py  test_stack.py
