[tool.poetry]
name = "jua-training-poc"
version = "0.1.0"
description = "This is a repository setup for evaluating training performance on various hardware."
authors = ["Jua Engineering Tea"]
readme = "README.md"
license = "JUA LICENSE"
packages = [{ include = "**/*.py", from = "." }]

[tool.poetry.dependencies]
python = "~3.11"
pyyaml = "^6.0.1"
numpy = "^1.25.2"
accelerate = "0.32.0"

torch = [
  {version = "^2.3.0+cu121", source = "pytorch", markers = "sys_platform == 'linux'"},
  {version = "^2.3.0", source = "PyPI", markers = "sys_platform == 'darwin'"}
]
torchvision = [
  {version = "^0.18.0+cu121", source = "pytorch", markers = "sys_platform == 'linux'"},
  {version = "^0.18.0", source = "PyPI", markers = "sys_platform == 'darwin'"}
]
tqdm = "^4.66.1"
einops = "^0.8.0"
timm = "^1.0.9"
pydantic = "^2.10.6"
xarray = {extras = ["zarr"], version = "^2025.1.2"}
zarr = "^3.0.2"
wandb = "^0.19.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.format.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
ruff = "0.0.254"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-exec-plugin.commands]
format = "isort . && black . && ruff check ."
format-ci = "isort --check . && black --check . && ruff check . --format=github"

[tool.isort]
profile = 'black'

